no longer displays About Me title on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1071,6 +1071,7 @@ and (max-device-width : 812px) {
 
     #lead {
         background-size: 100% auto;
+        background-repeat: no-repeat !important;
     }
 
     #lead-content {
